feat(deploy pipeline): added new api-tests after dev deploy for NPG flow

--- a/.devops/azure-templates/api-tests.yml
+++ b/.devops/azure-templates/api-tests.yml
@@ -1,5 +1,7 @@
 parameters:
   # Required
+  - name: "COLLECTION_TEST_FILE"
+    type: "string"
   - name: "ENV_FILE"
     type: string
   - name: "TEST_FILE_PREFIX"
@@ -10,7 +12,7 @@ steps:
       yarn global add newman
     displayName: 'Newman installation'
   - script: |
-      newman run api-tests/checkout-tests/checkout-for-ecommerce-api.tests.json -e ${{ parameters.ENV_FILE }} --ignore-redirects --reporters cli,junit --reporter-junit-export Results/${{ parameters.TEST_FILE_PREFIX }}-api-TEST.xml
+      newman run ${{ parameters.COLLECTION_TEST_FILE }} -e ${{ parameters.ENV_FILE }} --ignore-redirects --reporters cli,junit --reporter-junit-export Results/${{ parameters.TEST_FILE_PREFIX }}-api-TEST.xml
     displayName: 'Run api test app - env file: ${{ parameters.ENV_FILE }}'
   - task: PublishTestResults@2
     condition: succeededOrFailed()
