feat(deploy pipeline): restore branch for checkout tests

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -81,7 +81,7 @@ resources:
     - repository: pagopaCheckoutTests
       type: github
       name: pagopa/pagopa-checkout-tests
-      ref: CHK-1870-NPG-for-ecommerce
+      ref: main
       endpoint: 'io-azure-devops-github-ro'
 
 pool:
