feat(deploy pipeline): CHK-1870 api tests for NPG (#347)
* feat(deploy pipeline): added new api-tests after dev deploy for NPG flow

* feat(deploy pipeline): modified pagopaCheckoutTests branch

* feat(deploy pipeline): restore branch for checkout tests

--- a/.devops/deploy-pipelines.yml
+++ b/.devops/deploy-pipelines.yml
@@ -145,6 +145,7 @@ stages:
           - checkout: pagopaCheckoutTests
           - template: azure-templates/api-tests.yml
             parameters:
+              COLLECTION_TEST_FILE: "api-tests/checkout-tests/npg/checkout-for-ecommerce-api.tests.json"
               ENV_FILE: "api-tests/dev.envs.json"
               TEST_FILE_PREFIX: "dev"
 
@@ -240,6 +241,7 @@ stages:
           - checkout: pagopaCheckoutTests
           - template: azure-templates/api-tests.yml
             parameters:
+              COLLECTION_TEST_FILE: "api-tests/checkout-tests/pgs/checkout-for-ecommerce-api.tests.json"
               ENV_FILE: "api-tests/uat.transactions.blue.envs.json"
               TEST_FILE_PREFIX: "blue-uat"
 
@@ -371,6 +373,7 @@ stages:
           - checkout: pagopaCheckoutTests
           - template: azure-templates/api-tests.yml
             parameters:
+              COLLECTION_TEST_FILE: "api-tests/checkout-tests/pgs/checkout-for-ecommerce-api.tests.json"
               ENV_FILE: "api-tests/uat.envs.json"
               TEST_FILE_PREFIX: "green-uat"
 
