feat(ff): add feature flag to enable sendpaymentresult for expired transactions

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,3 +74,5 @@ npg.client.key=${NPG_API_KEY}
 npg.authorization.cards.keys=${NPG_CARDS_PSP_KEYS}
 npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
 ecommerce.event.version=${ECOMMERCE_EVENT_VERSION}
+
+ecommerce.send-payment-result-for-tx-expired.enabled=${SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED}
