--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -123,6 +123,7 @@ microservice-chart:
     NPG_CARDS_PSP_LIST: "BCITITMM,CIPBITMM,BIC36019"
     CHECKOUT_BASE_PATH: "https://dev.checkout.pagopa.it"
     ECOMMERCE_EVENT_VERSION: "V1"
+    SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
