--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -73,6 +73,7 @@ microservice-chart:
       NPG_CARDS_PSP_LIST: "BCITITMM"
       CHECKOUT_BASE_PATH: "https://uat.checkout.pagopa.it"
       ECOMMERCE_EVENT_VERSION: "V1"
+      SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -198,6 +199,7 @@ microservice-chart:
     NPG_CARDS_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
     CHECKOUT_BASE_PATH: "https://uat.checkout.pagopa.it"
     ECOMMERCE_EVENT_VERSION: "V1"
+    SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
