feat(availability): add new label

--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -237,5 +237,5 @@ microservice-chart:
                 operator: In
                 values:
                   - user
-        topologyKey: failure-domain.beta.kubernetes.io/zone
+        topologyKey: topology.kubernetes.io/zone
 
