--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -1,5 +1,6 @@
 nodo.hostname=https://localhost/nodo
 nodo.nodeforpsp.uri=/webservices/pof/PagamentiTelematiciPspNodoservice
+nodo.nodoperpm.uri=/webservices/pof/PagamentiTelematiciPspNodoservice
 nodo.readTimeout=10000
 nodo.connectionTimeout=10000
 nodo.retry=2
