--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ REDIS_SSL_ENABLED=false
 
 NODO_HOSTNAME="http://pagopa-ecommerce-traefik"
 NODE_FOR_PSP_URI=/webservices/pof/PagamentiTelematiciPspNodoservice
+NODO_PER_PM_URI=/nodo-per-pm/v2/closepayment
 NODO_READ_TIMEOUT=10000
 NODO_CONNECTION_TIMEOUT=10000
 NODO_CONNECTION_STRING="{\"idPSP\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBrokerPSP\":\"12345678912\",\"password\":\"password\"}"
