--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -26,6 +26,7 @@ microservice-chart:
       REDIS_SSL_ENABLED: "true"
       NODO_HOSTNAME: https://api.platform.pagopa.it
       NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
+      NODO_PER_PM_URI: /nodo/nodo-per-pm/v2
       NODO_READ_TIMEOUT: "10000"
       NODO_CONNECTION_TIMEOUT: "10000"
       NODO_PARALLEL_REQUESTS: "5"
@@ -153,6 +154,7 @@ microservice-chart:
     REDIS_SSL_ENABLED: "true"
     NODO_HOSTNAME: https://api.platform.pagopa.it
     NODE_FOR_PSP_URI: /nodo/node-for-psp/v1
+    NODO_PER_PM_URI: /nodo/nodo-per-pm/v2
     NODO_READ_TIMEOUT: "10000"
     NODO_CONNECTION_TIMEOUT: "10000"
     NODO_PARALLEL_REQUESTS: "5"
