--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ logging.level.it.pagopa=${SERVICE_LOGGING_LEVEL:info}
 
 nodo.hostname=${NODO_HOSTNAME}
 nodo.nodeforpsp.uri=${NODE_FOR_PSP_URI}
+nodo.nodoperpm.uri=${NODO_PER_PM_URI}
 nodo.readTimeout=${NODO_READ_TIMEOUT}
 nodo.connectionTimeout=${NODO_CONNECTION_TIMEOUT}
 nodo.connection.string=${NODO_CONNECTION_STRING}
