--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -133,7 +133,7 @@ microservice-chart:
       cpu: "500m"
   autoscaling:
     enable: true
-    minReplica: 2
+    minReplica: 3
     maxReplica: 10
     pollingInterval: 30 # seconds
     cooldownPeriod: 300 # seconds
@@ -229,3 +229,13 @@ microservice-chart:
                 operator: In
                 values:
                   - user
+    podAntiAffinity:
+      preferredDuringSchedulingIgnoredDuringExecution:
+        - weight: 100
+          podAffinityTerm:
+            labelSelector:
+              matchLabels:
+                app.kubernetes.io/instance: pagopaecommercetransactionsservice
+            namespaces: [ "ecommerce" ]
+            topologyKey: topology.kubernetes.io/zone
+
