feat:added wallet client env variable and tests

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,11 @@ ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT=10000
 ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT=10000
 ECOMMERCE_PAYMENT_METHODS_APY_KEY=payment-method-api-key
 
+WALLET_URI="http://pagopa-wallet-service:9090"
+WALLET_READ_TIMEOUT=10000
+WALLET_CONNECTION_TIMEOUT=10000
+WALLET_API_KEY=wallet-api-key
+
 AFM_URI="http://pagopa-gec-mock:3000/afm/node/calculator-service/v1/fees"
 AFM_READ_TIMEOUT=10000
 AFM_CONNECTION_TIMEOUT=10000
