--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -85,6 +85,9 @@ microservice-chart:
     ECOMMERCE_PAYMENT_METHODS_URI: https://api.dev.platform.pagopa.it/ecommerce/payment-methods-service/v1
     ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT: "10000"
     ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT: "10000"
+    WALLET_URI: https://api.dev.platform.pagopa.it/payment-wallet/v1
+    WALLET_READ_TIMEOUT: "10000"
+    WALLET_CONNECTION_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway/internal/v1
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT: "10000"
@@ -134,6 +137,7 @@ microservice-chart:
     JWT_SECRET: sessions-jwt-secret
     PERSONAL_DATA_VAULT_API_KEY: personal-data-vault-api-key
     ECOMMERCE_PAYMENT_METHODS_APY_KEY: payment-method-api-key
+    WALLET_API_KEY: wallet-api-key
     OTEL_EXPORTER_OTLP_HEADERS: elastic-otel-token-header
     NPG_API_KEY: npg-api-key
     NPG_CARDS_PSP_KEYS: npg-cards-psp-keys
