--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,6 +28,11 @@ ecommercePaymentMethods.readTimeout=${ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT}
 ecommercePaymentMethods.connectionTimeout=${ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT}
 ecommercePaymentMethods.apiKey=${ECOMMERCE_PAYMENT_METHODS_APY_KEY}
 
+wallet.uri=${WALLET_URI}
+wallet.readTimeout=${WALLET_READ_TIMEOUT}
+wallet.connectionTimeout=${WALLET_CONNECTION_TIMEOUT}
+wallet.apiKey=${WALLET_API_KEY}
+
 notificationsService.uri=${NOTIFICATIONS_SERVICE_URI}
 notificationsService.readTimeout=${NOTIFICATIONS_SERVICE_READ_TIMEOUT}
 notificationsService.connectionTimeout=${NOTIFICATIONS_SERVICE_CONNECTION_TIMEOUT}
