--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -17,6 +17,11 @@ ecommercePaymentMethods.readTimeout=10000
 ecommercePaymentMethods.connectionTimeout=10000
 ecommercePaymentMethods.apiKey=payment-method-api-key
 
+wallet.uri=https://localhost/wallet
+wallet.readTimeout=10000
+wallet.connectionTimeout=10000
+wallet.apiKey=wallet-api-key
+
 paymentTransactionsGateway.uri=http://localhost/pgs
 paymentTransactionsGateway.readTimeout=10000
 paymentTransactionsGateway.connectionTimeout=10000
