fix: added logic for execute NPG build and env variable sessionUrl

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,3 +81,8 @@ npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
 ecommerce.event.version=${ECOMMERCE_EVENT_VERSION}
 
 ecommerce.send-payment-result-for-tx-expired.enabled=${SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED}
+
+sessionUrl.basePath=${SESSION_URL_BASEPATH}
+sessionUrl.outcomeSuffix=${SESSION_URL_OUTCOME_SUFFIX}
+sessionUrl.cancelSuffix=${SESSION_URL_CANCEL_SUFFIX}
+sessionUrl.notificationUrl=${SESSION_URL_NOTIFICATION_URL}
