--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -127,6 +127,10 @@ microservice-chart:
     CHECKOUT_BASE_PATH: "https://dev.checkout.pagopa.it"
     ECOMMERCE_EVENT_VERSION: "V1"
     SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
+    SESSION_URL_BASEPATH: "https://dev.checkout.pagopa.it"
+    SESSION_URL_OUTCOME_SUFFIX: "/esito"
+    SESSION_URL_CANCEL_SUFFIX: "/cancel"
+    SESSION_URL_NOTIFICATION_URL: "https://api.dev.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?paymentMethodId={paymentMethodId}"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
