feat:added defaultApiKey for invoke NPG build

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,7 +75,7 @@ checkout.basePath=${CHECKOUT_BASE_PATH}
 npg.uri=${NPG_URI}
 npg.readTimeout=${NPG_READ_TIMEOUT}
 npg.connectionTimeout=${NPG_CONNECTION_TIMEOUT}
-npg.client.key=${NPG_API_KEY}
+npg.client.apiKey=${NPG_API_KEY}
 npg.authorization.cards.keys=${NPG_CARDS_PSP_KEYS}
 npg.authorization.cards.pspList=${NPG_CARDS_PSP_LIST}
 ecommerce.event.version=${ECOMMERCE_EVENT_VERSION}
