--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -75,7 +75,7 @@ checkout.basePath=http://localhost/checkout
 npg.uri=http://localhost/npg
 npg.readTimeout=10000
 npg.connectionTimeout=10000
-npg.client.key=npg_key
+npg.client.apiKey=npg_key
 npg.authorization.cards.keys={"psp1":"key1","psp2":"key2"}
 npg.authorization.cards.pspList=psp1,psp2
 ecommerce.event.version=V2
