--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -78,7 +78,7 @@ microservice-chart:
       ECOMMERCE_EVENT_VERSION: "V1"
       SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
       SESSION_URL_BASEPATH: "https://uat.checkout.pagopa.it"
-      SESSION_URL_OUTCOME_SUFFIX: "/esito"
+      SESSION_URL_OUTCOME_SUFFIX: "/esito?clientId=IO?transactionId={transactionId}"
       SESSION_URL_CANCEL_SUFFIX: "/cancel"
       SESSION_URL_NOTIFICATION_URL: "https://api.uat.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?paymentMethodId={paymentMethodId}"
     envSecret:
@@ -212,7 +212,7 @@ microservice-chart:
     ECOMMERCE_EVENT_VERSION: "V1"
     SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
     SESSION_URL_BASEPATH: "https://uat.checkout.pagopa.it"
-    SESSION_URL_OUTCOME_SUFFIX: "/esito"
+    SESSION_URL_OUTCOME_SUFFIX: "/esito?clientId=IO?transactionId={transactionId}"
     SESSION_URL_CANCEL_SUFFIX: "/cancel"
     SESSION_URL_NOTIFICATION_URL: "https://api.uat.platform.pagopa.it/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?paymentMethodId={paymentMethodId}"
   envSecret:
