feat: added transaction service test for walletDetails

--- a/.env.example
+++ b/.env.example
@@ -74,6 +74,6 @@ ECOMMERCE_EVENT_VERSION=V2
 SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED=true
 
 SESSION_URL_BASEPATH="https://localhost:1234"
-SESSION_URL_OUTCOME_SUFFIX="/esito"
+SESSION_URL_OUTCOME_SUFFIX="/esito?clientId=IO?transactionId={transactionId}"
 SESSION_URL_CANCEL_SUFFIX="/cancel"
 SESSION_URL_NOTIFICATION_URL:"http://localhost/ecommerce/npg/notifications/v1/sessions/{orderId}/outcomes?paymentMethodId={paymentMethodId}"
