fix: update wallet uri

--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -35,7 +35,7 @@ microservice-chart:
       ECOMMERCE_PAYMENT_METHODS_URI: https://api.uat.platform.pagopa.it/ecommerce/payment-methods-service/v1
       ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT: "10000"
       ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT: "10000"
-      WALLET_URI: https://api.uat.platform.pagopa.it/payment-wallet/v1
+      WALLET_URI: https://api.uat.platform.pagopa.it/payment-wallet-for-ecommerce/v1
       WALLET_READ_TIMEOUT: "10000"
       WALLET_CONNECTION_TIMEOUT: "10000"
       PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.uat.platform.pagopa.it/payment-transactions-gateway/internal/v1
@@ -170,7 +170,7 @@ microservice-chart:
     ECOMMERCE_PAYMENT_METHODS_URI: https://api.uat.platform.pagopa.it/ecommerce/payment-methods-service/v1
     ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT: "10000"
     ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT: "10000"
-    WALLET_URI: https://api.uat.platform.pagopa.it/payment-wallet/v1
+    WALLET_URI: https://api.uat.platform.pagopa.it/payment-wallet-for-ecommerce/v1
     WALLET_READ_TIMEOUT: "10000"
     WALLET_CONNECTION_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.uat.platform.pagopa.it/payment-transactions-gateway/internal/v1
