--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -86,7 +86,7 @@ microservice-chart:
     ECOMMERCE_PAYMENT_METHODS_URI: https://api.dev.platform.pagopa.it/ecommerce/payment-methods-service/v1
     ECOMMERCE_PAYMENT_METHODS_READ_TIMEOUT: "10000"
     ECOMMERCE_PAYMENT_METHODS_CONNECTION_TIMEOUT: "10000"
-    WALLET_URI: https://api.dev.platform.pagopa.it/payment-wallet/v1
+    WALLET_URI: https://api.dev.platform.pagopa.it/payment-wallet-for-ecommerce/v1
     WALLET_READ_TIMEOUT: "10000"
     WALLET_CONNECTION_TIMEOUT: "10000"
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway/internal/v1
