feat(retry): disable retry for blocking exceptions (#370)
* feat(retry): disable retry for blocking exceptions

* fix: tests

* Update src/test/java/it/pagopa/transactions/services/v1/CircuitBreakerTest.java

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

* fix: renaming local variable

* fix: code review

* Update src/test/java/it/pagopa/transactions/services/v2/CircuitBreakerTest.java

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

---------

Co-authored-by: Giovanni Berti <giovanni.berti@pagopa.it>

--- a/pom.xml
+++ b/pom.xml
@@ -244,6 +244,11 @@
             <version>${mock-web-server.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
