--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -87,3 +87,4 @@ sessionUrl.basePath=${SESSION_URL_BASEPATH}
 sessionUrl.outcomeSuffix=${SESSION_URL_OUTCOME_SUFFIX}
 sessionUrl.cancelSuffix=${SESSION_URL_CANCEL_SUFFIX}
 sessionUrl.notificationUrl=${SESSION_URL_NOTIFICATION_URL}
+transactionDocument.ttl=${TRANSACTION_DOCUMENT_TTL}
