--- a/src/test/resources/application-tests.properties
+++ b/src/test/resources/application-tests.properties
@@ -80,7 +80,7 @@ npg.client.apiKey=npg_key
 npg.authorization.cards.keys={"psp1":"key1","psp2":"key2"}
 npg.authorization.cards.pspList=psp1,psp2
 ecommerce.event.version=V2
-
+transactionDocument.ttl=1000
 ecommerce.send-payment-result-for-tx-expired.enabled=false
 
 SESSION_URL_BASEPATH="https://localhost:1234"
