--- a/.env.example
+++ b/.env.example
@@ -70,6 +70,7 @@ NPG_CONNECTION_TIMEOUT=10000
 NPG_API_KEY="npg-api-key"
 NPG_CARDS_PSP_LIST=CIPBITMM,BNLIITRR,BCITITMM,UNCRITMM,BPPIITRRXXX,PPAYITR1XXX
 NPG_CARDS_PSP_KEYS={"CIPBITMM":"CIPBITMM-api-key","BNLIITRR":"BNLIITRR-api-key","BCITITMM":"BCITITMM-api-key","UNCRITMM":"UNCRITMM-api-key","BPPIITRRXXX":"BPPIITRRXXX-api-key","PPAYITR1XXX":"PPAYITR1XXX-api-key"}
+TRANSACTION_DOCUMENT_TTL=600
 ECOMMERCE_EVENT_VERSION=V2
 
 SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED=true
