--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <java.version>17</java.version>
         <spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
         <jacoco.version>0.8.8</jacoco.version>
-        <pagopa-ecommerce-commons.version>0.29.4</pagopa-ecommerce-commons.version>
+        <pagopa-ecommerce-commons.version>0.30.0</pagopa-ecommerce-commons.version>
         <spotless.version>2.28.0</spotless.version>
         <ecs-logging-version>1.5.0</ecs-logging-version>
         <mock-web-server.version>4.11.0</mock-web-server.version>
@@ -350,7 +350,7 @@
                             <configOptions>
                                 <swaggerAnnotations>false</swaggerAnnotations>
                                 <openApiNullable>false</openApiNullable>
-                            </configOptions>
+                            </configOptions>c
                             <modelPackage>it.pagopa.generated.ecommerce.paymentmethods.v1.dto</modelPackage>
                             <apiPackage>it.pagopa.generated.ecommerce.paymentmethods.v1.api</apiPackage>
                             <modelNameSuffix>dto</modelNameSuffix>
