--- a/helm/values-prod.yaml
+++ b/helm/values-prod.yaml
@@ -75,7 +75,7 @@ microservice-chart:
       NPG_CARDS_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
       CHECKOUT_BASE_PATH: "https://checkout.pagopa.it"
       ECOMMERCE_EVENT_VERSION: "V1"
-      SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
+      SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "false"
     envSecret:
       MONGO_PASSWORD: mongo-ecommerce-password
       REDIS_PASSWORD: redis-ecommerce-password
@@ -203,7 +203,7 @@ microservice-chart:
     NPG_CARDS_PSP_LIST: "" #TODO to be filled with psp id list that are expected to be present into psp api keys configuration
     CHECKOUT_BASE_PATH: "https://checkout.pagopa.it"
     ECOMMERCE_EVENT_VERSION: "V1"
-    SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "true"
+    SEND_PAYMENT_RESULT_FOR_TX_EXPIRED_ENABLED: "false"
   envSecret:
     MONGO_PASSWORD: mongo-ecommerce-password
     REDIS_PASSWORD: redis-ecommerce-password
